--- a/courses.html
+++ b/courses.html
@@ -10,7 +10,7 @@
     <div class="container">
         <div class="header">
             <div class="header-left">
-                <img src="logo.png" alt="Ukno Club Logo" class="header-logo">
+                <img src="assets/logo.png" alt="Ukno Club Logo" class="header-logo">
                 <h1>Courses</h1>
             </div>
             <div class="nav-buttons">
